load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common_headers",
    hdrs = [
        "//:icu4c/source/common/unicode/uidna.h",
        "//:icu4c/source/common/unicode/errorcode.h",
        "//:icu4c/source/common/unicode/ucat.h",
        "//:icu4c/source/common/unicode/localematcher.h",
        "//:icu4c/source/common/unicode/parsepos.h",
        "//:icu4c/source/common/unicode/unifunct.h",
        "//:icu4c/source/common/unicode/umachine.h",
        "//:icu4c/source/common/unicode/stringoptions.h",
        "//:icu4c/source/common/unicode/ucnv_cb.h",
        "//:icu4c/source/common/unicode/brkiter.h",
        "//:icu4c/source/common/unicode/bytestriebuilder.h",
        "//:icu4c/source/common/unicode/urename.h",
        "//:icu4c/source/common/unicode/uchriter.h",
        "//:icu4c/source/common/unicode/ucnvsel.h",
        "//:icu4c/source/common/unicode/ucnv.h",
        "//:icu4c/source/common/unicode/stringtriebuilder.h",
        "//:icu4c/source/common/unicode/urep.h",
        "//:icu4c/source/common/unicode/uscript.h",
        "//:icu4c/source/common/unicode/ubiditransform.h",
        "//:icu4c/source/common/unicode/symtable.h",
        "//:icu4c/source/common/unicode/usetiter.h",
        "//:icu4c/source/common/unicode/uchar.h",
        "//:icu4c/source/common/unicode/icuplug.h",
        "//:icu4c/source/common/unicode/udisplaycontext.h",
        "//:icu4c/source/common/unicode/usprep.h",
        "//:icu4c/source/common/unicode/unistr.h",
        "//:icu4c/source/common/unicode/strenum.h",
        "//:icu4c/source/common/unicode/uiter.h",
        "//:icu4c/source/common/unicode/ubrk.h",
        "//:icu4c/source/common/unicode/unorm.h",
        "//:icu4c/source/common/unicode/ucurr.h",
        "//:icu4c/source/common/unicode/rbbi.h",
        "//:icu4c/source/common/unicode/dbbi.h",
        "//:icu4c/source/common/unicode/uconfig.h",
        "//:icu4c/source/common/unicode/icudataver.h",
        "//:icu4c/source/common/unicode/stringpiece.h",
        "//:icu4c/source/common/unicode/uldnames.h",
        "//:icu4c/source/common/unicode/umutablecptrie.h",
        "//:icu4c/source/common/unicode/putil.h",
        "//:icu4c/source/common/unicode/udata.h",
        "//:icu4c/source/common/unicode/schriter.h",
        "//:icu4c/source/common/unicode/uset.h",
        "//:icu4c/source/common/unicode/bytestream.h",
        "//:icu4c/source/common/unicode/ubidi.h",
        "//:icu4c/source/common/unicode/ustringtrie.h",
        "//:icu4c/source/common/unicode/ushape.h",
        "//:icu4c/source/common/unicode/uloc.h",
        "//:icu4c/source/common/unicode/std_string.h",
        "//:icu4c/source/common/unicode/messagepattern.h",
        "//:icu4c/source/common/unicode/utf32.h",
        "//:icu4c/source/common/unicode/utf.h",
        "//:icu4c/source/common/unicode/uobject.h",
        "//:icu4c/source/common/unicode/utext.h",
        "//:icu4c/source/common/unicode/locdspnm.h",
        "//:icu4c/source/common/unicode/appendable.h",
        "//:icu4c/source/common/unicode/uenum.h",
        "//:icu4c/source/common/unicode/ucharstriebuilder.h",
        "//:icu4c/source/common/unicode/ucasemap.h",
        "//:icu4c/source/common/unicode/localpointer.h",
        "//:icu4c/source/common/unicode/resbund.h",
        "//:icu4c/source/common/unicode/ucnv_err.h",
        "//:icu4c/source/common/unicode/localebuilder.h",
        "//:icu4c/source/common/unicode/utf8.h",
        "//:icu4c/source/common/unicode/utf16.h",
        "//:icu4c/source/common/unicode/ptypes.h",
        "//:icu4c/source/common/unicode/uniset.h",
        "//:icu4c/source/common/unicode/ucptrie.h",
        "//:icu4c/source/common/unicode/dtintrv.h",
        "//:icu4c/source/common/unicode/enumset.h",
        "//:icu4c/source/common/unicode/platform.h",
        "//:icu4c/source/common/unicode/utypes.h",
        "//:icu4c/source/common/unicode/casemap.h",
        "//:icu4c/source/common/unicode/ulocbuilder.h",
        "//:icu4c/source/common/unicode/char16ptr.h",
        "//:icu4c/source/common/unicode/utf_old.h",
        "//:icu4c/source/common/unicode/normalizer2.h",
        "//:icu4c/source/common/unicode/ucpmap.h",
        "//:icu4c/source/common/unicode/ustring.h",
        "//:icu4c/source/common/unicode/simpleformatter.h",
        "//:icu4c/source/common/unicode/parseerr.h",
        "//:icu4c/source/common/unicode/utrace.h",
        "//:icu4c/source/common/unicode/rep.h",
        "//:icu4c/source/common/unicode/locid.h",
        "//:icu4c/source/common/unicode/unorm2.h",
        "//:icu4c/source/common/unicode/ucharstrie.h",
        "//:icu4c/source/common/unicode/uvernum.h",
        "//:icu4c/source/common/unicode/uclean.h",
        "//:icu4c/source/common/unicode/uversion.h",
        "//:icu4c/source/common/unicode/unimatch.h",
        "//:icu4c/source/common/unicode/umisc.h",
        "//:icu4c/source/common/unicode/normlzr.h",
        "//:icu4c/source/common/unicode/unifilt.h",
        "//:icu4c/source/common/unicode/edits.h",
        "//:icu4c/source/common/unicode/filteredbrk.h",
        "//:icu4c/source/common/unicode/caniter.h",
        "//:icu4c/source/common/unicode/chariter.h",
        "//:icu4c/source/common/unicode/utfiterator.h",
        "//:icu4c/source/common/unicode/ulocale.h",
        "//:icu4c/source/common/unicode/ures.h",
        "//:icu4c/source/common/unicode/idna.h",
        "//:icu4c/source/common/unicode/utfstring.h",
        "//:icu4c/source/common/unicode/bytestrie.h",
        "//:icu4c/source/common/unicode/docmain.h",
        "//:icu4c/source/common/cpputils.h",
        "//:icu4c/source/common/locdistance.h",
        "//:icu4c/source/common/uarrsort.h",
        "//:icu4c/source/common/lsr.h",
        "//:icu4c/source/common/fixedstring.h",
        "//:icu4c/source/common/servnotf.h",
        "//:icu4c/source/common/rbbinode.h",
        "//:icu4c/source/common/unormimp.h",
        "//:icu4c/source/common/uinvchar.h",
        "//:icu4c/source/common/serv.h",
        "//:icu4c/source/common/rbbisetb.h",
        "//:icu4c/source/common/wintz.h",
        "//:icu4c/source/common/ubrkimpl.h",
        "//:icu4c/source/common/uniquecharstr.h",
        "//:icu4c/source/common/emojiprops.h",
        "//:icu4c/source/common/cstr.h",
        "//:icu4c/source/common/sprpimpl.h",
        "//:icu4c/source/common/cwchar.h",
        "//:icu4c/source/common/dictbe.h",
        "//:icu4c/source/common/unifiedcache.h",
        "//:icu4c/source/common/locutil.h",
        "//:icu4c/source/common/dictionarydata.h",
        "//:icu4c/source/common/utypeinfo.h",
        "//:icu4c/source/common/ustr_cnv.h",
        "//:icu4c/source/common/unisetspan.h",
        "//:icu4c/source/common/rbbirpt.h",
        "//:icu4c/source/common/uvectr32.h",
        "//:icu4c/source/common/ucurrimp.h",
        "//:icu4c/source/common/ucase.h",
        "//:icu4c/source/common/uposixdefs.h",
        "//:icu4c/source/common/capi_helper.h",
        "//:icu4c/source/common/ustr_imp.h",
        "//:icu4c/source/common/utracimp.h",
        "//:icu4c/source/common/uset_imp.h",
        "//:icu4c/source/common/norm2_nfc_data.h",
        "//:icu4c/source/common/uenumimp.h",
        "//:icu4c/source/common/uvectr64.h",
        "//:icu4c/source/common/utrie2_impl.h",
        "//:icu4c/source/common/resource.h",
        "//:icu4c/source/common/udataswp.h",
        "//:icu4c/source/common/usc_impl.h",
        "//:icu4c/source/common/uprops.h",
        "//:icu4c/source/common/static_unicode_sets.h",
        "//:icu4c/source/common/cstring.h",
        "//:icu4c/source/common/locmap.h",
        "//:icu4c/source/common/mutex.h",
        "//:icu4c/source/common/ucnv_cnv.h",
        "//:icu4c/source/common/utrie.h",
        "//:icu4c/source/common/uchar_props_data.h",
        "//:icu4c/source/common/norm2allmodes.h",
        "//:icu4c/source/common/uresimp.h",
        "//:icu4c/source/common/ubidi_props_data.h",
        "//:icu4c/source/common/ucln_imp.h",
        "//:icu4c/source/common/ubidi_props.h",
        "//:icu4c/source/common/util.h",
        "//:icu4c/source/common/rbbi_cache.h",
        "//:icu4c/source/common/uassert.h",
        "//:icu4c/source/common/umapfile.h",
        "//:icu4c/source/common/ulayout_props.h",
        "//:icu4c/source/common/localsvc.h",
        "//:icu4c/source/common/hash.h",
        "//:icu4c/source/common/ulist.h",
        "//:icu4c/source/common/umutex.h",
        "//:icu4c/source/common/restrace.h",
        "//:icu4c/source/common/ucasemap_imp.h",
        "//:icu4c/source/common/ulocimp.h",
        "//:icu4c/source/common/ucptrie_impl.h",
        "//:icu4c/source/common/putilimp.h",
        "//:icu4c/source/common/icuplugimp.h",
        "//:icu4c/source/common/ucmndata.h",
        "//:icu4c/source/common/udatamem.h",
        "//:icu4c/source/common/rbbitblb.h",
        "//:icu4c/source/common/rbbidata.h",
        "//:icu4c/source/common/lstmbe.h",
        "//:icu4c/source/common/uhash.h",
        "//:icu4c/source/common/ucase_props_data.h",
        "//:icu4c/source/common/ubidiimp.h",
        "//:icu4c/source/common/sharedobject.h",
        "//:icu4c/source/common/charstrmap.h",
        "//:icu4c/source/common/ucnv_io.h",
        "//:icu4c/source/common/ucol_data.h",
        "//:icu4c/source/common/ucnv_bld.h",
        "//:icu4c/source/common/ucln_cmn.h",
        "//:icu4c/source/common/brkeng.h",
        "//:icu4c/source/common/ureslocs.h",
        "//:icu4c/source/common/unistrappender.h",
        "//:icu4c/source/common/uelement.h",
        "//:icu4c/source/common/charstr.h",
        "//:icu4c/source/common/cmemory.h",
        "//:icu4c/source/common/punycode.h",
        "//:icu4c/source/common/ustrfmt.h",
        "//:icu4c/source/common/servloc.h",
        "//:icu4c/source/common/ucln.h",
        "//:icu4c/source/common/locbased.h",
        "//:icu4c/source/common/rbbiscan.h",
        "//:icu4c/source/common/pluralmap.h",
        "//:icu4c/source/common/mlbe.h",
        "//:icu4c/source/common/propsvec.h",
        "//:icu4c/source/common/ucnv_ext.h",
        "//:icu4c/source/common/msvcres.h",
        "//:icu4c/source/common/localeprioritylist.h",
        "//:icu4c/source/common/normalizer2impl.h",
        "//:icu4c/source/common/ruleiter.h",
        "//:icu4c/source/common/localefallback_data.h",
        "//:icu4c/source/common/bmpset.h",
        "//:icu4c/source/common/ucnvmbcs.h",
        "//:icu4c/source/common/rbbirb.h",
        "//:icu4c/source/common/ucnv_imp.h",
        "//:icu4c/source/common/patternprops.h",
        "//:icu4c/source/common/loclikelysubtags.h",
        "//:icu4c/source/common/utrie2.h",
        "//:icu4c/source/common/messageimpl.h",
        "//:icu4c/source/common/propname_data.h",
        "//:icu4c/source/common/propname.h",
        "//:icu4c/source/common/ucol_swp.h",
        "//:icu4c/source/common/bytesinkutil.h",
        "//:icu4c/source/common/uvector.h",
        "//:icu4c/source/common/uresdata.h",
        "//:icu4c/source/common/ustrenum.h"
    ],
    copts = [
        "-Iicu4c/source/common",
    ],
)

cc_library(
    name = "common",
    srcs = [
        "//:icu4c/source/common/appendable.cpp",
        "//:icu4c/source/common/bmpset.cpp",
        "//:icu4c/source/common/brkeng.cpp",
        "//:icu4c/source/common/brkiter.cpp",
        "//:icu4c/source/common/bytesinkutil.cpp",
        "//:icu4c/source/common/bytestream.cpp",
        "//:icu4c/source/common/bytestrie.cpp",
        "//:icu4c/source/common/bytestriebuilder.cpp",
        "//:icu4c/source/common/bytestrieiterator.cpp",
        "//:icu4c/source/common/caniter.cpp",
        "//:icu4c/source/common/characterproperties.cpp",
        "//:icu4c/source/common/chariter.cpp",
        "//:icu4c/source/common/charstr.cpp",
        "//:icu4c/source/common/cmemory.cpp",
        "//:icu4c/source/common/cstr.cpp",
        "//:icu4c/source/common/cstring.cpp",
        "//:icu4c/source/common/cwchar.cpp",
        "//:icu4c/source/common/dictbe.cpp",
        "//:icu4c/source/common/dictionarydata.cpp",
        "//:icu4c/source/common/dtintrv.cpp",
        "//:icu4c/source/common/edits.cpp",
        "//:icu4c/source/common/emojiprops.cpp",
        "//:icu4c/source/common/errorcode.cpp",
        "//:icu4c/source/common/filteredbrk.cpp",
        "//:icu4c/source/common/filterednormalizer2.cpp",
        "//:icu4c/source/common/fixedstring.cpp",
        "//:icu4c/source/common/icudataver.cpp",
        "//:icu4c/source/common/icuplug.cpp",
        "//:icu4c/source/common/loadednormalizer2impl.cpp",
        "//:icu4c/source/common/localebuilder.cpp",
        "//:icu4c/source/common/localematcher.cpp",
        "//:icu4c/source/common/localeprioritylist.cpp",
        "//:icu4c/source/common/locavailable.cpp",
        "//:icu4c/source/common/locbased.cpp",
        "//:icu4c/source/common/locdispnames.cpp",
        "//:icu4c/source/common/locdistance.cpp",
        "//:icu4c/source/common/locdspnm.cpp",
        "//:icu4c/source/common/locid.cpp",
        "//:icu4c/source/common/loclikely.cpp",
        "//:icu4c/source/common/loclikelysubtags.cpp",
        "//:icu4c/source/common/locmap.cpp",
        "//:icu4c/source/common/locresdata.cpp",
        "//:icu4c/source/common/locutil.cpp",
        "//:icu4c/source/common/lsr.cpp",
        "//:icu4c/source/common/lstmbe.cpp",
        "//:icu4c/source/common/messagepattern.cpp",
        "//:icu4c/source/common/mlbe.cpp",
        "//:icu4c/source/common/normalizer2.cpp",
        "//:icu4c/source/common/normalizer2impl.cpp",
        "//:icu4c/source/common/normlzr.cpp",
        "//:icu4c/source/common/parsepos.cpp",
        "//:icu4c/source/common/patternprops.cpp",
        "//:icu4c/source/common/pluralmap.cpp",
        "//:icu4c/source/common/propname.cpp",
        "//:icu4c/source/common/propsvec.cpp",
        "//:icu4c/source/common/punycode.cpp",
        "//:icu4c/source/common/putil.cpp",
        "//:icu4c/source/common/rbbi.cpp",
        "//:icu4c/source/common/rbbi_cache.cpp",
        "//:icu4c/source/common/rbbidata.cpp",
        "//:icu4c/source/common/rbbinode.cpp",
        "//:icu4c/source/common/rbbirb.cpp",
        "//:icu4c/source/common/rbbiscan.cpp",
        "//:icu4c/source/common/rbbisetb.cpp",
        "//:icu4c/source/common/rbbistbl.cpp",
        "//:icu4c/source/common/rbbitblb.cpp",
        "//:icu4c/source/common/resbund.cpp",
        "//:icu4c/source/common/resbund_cnv.cpp",
        "//:icu4c/source/common/resource.cpp",
        "//:icu4c/source/common/restrace.cpp",
        "//:icu4c/source/common/ruleiter.cpp",
        "//:icu4c/source/common/schriter.cpp",
        "//:icu4c/source/common/serv.cpp",
        "//:icu4c/source/common/servlk.cpp",
        "//:icu4c/source/common/servlkf.cpp",
        "//:icu4c/source/common/servls.cpp",
        "//:icu4c/source/common/servnotf.cpp",
        "//:icu4c/source/common/servrbf.cpp",
        "//:icu4c/source/common/servslkf.cpp",
        "//:icu4c/source/common/sharedobject.cpp",
        "//:icu4c/source/common/simpleformatter.cpp",
        "//:icu4c/source/common/static_unicode_sets.cpp",
        "//:icu4c/source/common/stringpiece.cpp",
        "//:icu4c/source/common/stringtriebuilder.cpp",
        "//:icu4c/source/common/uarrsort.cpp",
        "//:icu4c/source/common/ubidi.cpp",
        "//:icu4c/source/common/ubidi_props.cpp",
        "//:icu4c/source/common/ubidiln.cpp",
        "//:icu4c/source/common/ubiditransform.cpp",
        "//:icu4c/source/common/ubidiwrt.cpp",
        "//:icu4c/source/common/ubrk.cpp",
        "//:icu4c/source/common/ucase.cpp",
        "//:icu4c/source/common/ucasemap.cpp",
        "//:icu4c/source/common/ucasemap_titlecase_brkiter.cpp",
        "//:icu4c/source/common/ucat.cpp",
        "//:icu4c/source/common/uchar.cpp",
        "//:icu4c/source/common/ucharstrie.cpp",
        "//:icu4c/source/common/ucharstriebuilder.cpp",
        "//:icu4c/source/common/ucharstrieiterator.cpp",
        "//:icu4c/source/common/uchriter.cpp",
        "//:icu4c/source/common/ucln_cmn.cpp",
        "//:icu4c/source/common/ucmndata.cpp",
        "//:icu4c/source/common/ucnv.cpp",
        "//:icu4c/source/common/ucnv2022.cpp",
        "//:icu4c/source/common/ucnv_bld.cpp",
        "//:icu4c/source/common/ucnv_cb.cpp",
        "//:icu4c/source/common/ucnv_cnv.cpp",
        "//:icu4c/source/common/ucnv_ct.cpp",
        "//:icu4c/source/common/ucnv_err.cpp",
        "//:icu4c/source/common/ucnv_ext.cpp",
        "//:icu4c/source/common/ucnv_io.cpp",
        "//:icu4c/source/common/ucnv_lmb.cpp",
        "//:icu4c/source/common/ucnv_set.cpp",
        "//:icu4c/source/common/ucnv_u16.cpp",
        "//:icu4c/source/common/ucnv_u32.cpp",
        "//:icu4c/source/common/ucnv_u7.cpp",
        "//:icu4c/source/common/ucnv_u8.cpp",
        "//:icu4c/source/common/ucnvbocu.cpp",
        "//:icu4c/source/common/ucnvdisp.cpp",
        "//:icu4c/source/common/ucnvhz.cpp",
        "//:icu4c/source/common/ucnvisci.cpp",
        "//:icu4c/source/common/ucnvlat1.cpp",
        "//:icu4c/source/common/ucnvmbcs.cpp",
        "//:icu4c/source/common/ucnvscsu.cpp",
        "//:icu4c/source/common/ucnvsel.cpp",
        "//:icu4c/source/common/ucol_swp.cpp",
        "//:icu4c/source/common/ucptrie.cpp",
        "//:icu4c/source/common/ucurr.cpp",
        "//:icu4c/source/common/udata.cpp",
        "//:icu4c/source/common/udatamem.cpp",
        "//:icu4c/source/common/udataswp.cpp",
        "//:icu4c/source/common/uenum.cpp",
        "//:icu4c/source/common/uhash.cpp",
        "//:icu4c/source/common/uhash_us.cpp",
        "//:icu4c/source/common/uidna.cpp",
        "//:icu4c/source/common/uinit.cpp",
        "//:icu4c/source/common/uinvchar.cpp",
        "//:icu4c/source/common/uiter.cpp",
        "//:icu4c/source/common/ulist.cpp",
        "//:icu4c/source/common/uloc.cpp",
        "//:icu4c/source/common/uloc_keytype.cpp",
        "//:icu4c/source/common/uloc_tag.cpp",
        "//:icu4c/source/common/ulocale.cpp",
        "//:icu4c/source/common/ulocbuilder.cpp",
        "//:icu4c/source/common/umapfile.cpp",
        "//:icu4c/source/common/umath.cpp",
        "//:icu4c/source/common/umutablecptrie.cpp",
        "//:icu4c/source/common/umutex.cpp",
        "//:icu4c/source/common/unames.cpp",
        "//:icu4c/source/common/unifiedcache.cpp",
        "//:icu4c/source/common/unifilt.cpp",
        "//:icu4c/source/common/unifunct.cpp",
        "//:icu4c/source/common/uniset.cpp",
        "//:icu4c/source/common/uniset_closure.cpp",
        "//:icu4c/source/common/uniset_props.cpp",
        "//:icu4c/source/common/unisetspan.cpp",
        "//:icu4c/source/common/unistr.cpp",
        "//:icu4c/source/common/unistr_case.cpp",
        "//:icu4c/source/common/unistr_case_locale.cpp",
        "//:icu4c/source/common/unistr_cnv.cpp",
        "//:icu4c/source/common/unistr_props.cpp",
        "//:icu4c/source/common/unistr_titlecase_brkiter.cpp",
        "//:icu4c/source/common/unorm.cpp",
        "//:icu4c/source/common/unormcmp.cpp",
        "//:icu4c/source/common/uobject.cpp",
        "//:icu4c/source/common/uprops.cpp",
        "//:icu4c/source/common/ures_cnv.cpp",
        "//:icu4c/source/common/uresbund.cpp",
        "//:icu4c/source/common/uresdata.cpp",
        "//:icu4c/source/common/usc_impl.cpp",
        "//:icu4c/source/common/uscript.cpp",
        "//:icu4c/source/common/uscript_props.cpp",
        "//:icu4c/source/common/uset.cpp",
        "//:icu4c/source/common/uset_props.cpp",
        "//:icu4c/source/common/usetiter.cpp",
        "//:icu4c/source/common/ushape.cpp",
        "//:icu4c/source/common/usprep.cpp",
        "//:icu4c/source/common/ustack.cpp",
        "//:icu4c/source/common/ustr_cnv.cpp",
        "//:icu4c/source/common/ustr_titlecase_brkiter.cpp",
        "//:icu4c/source/common/ustr_wcs.cpp",
        "//:icu4c/source/common/ustrcase.cpp",
        "//:icu4c/source/common/ustrcase_locale.cpp",
        "//:icu4c/source/common/ustrenum.cpp",
        "//:icu4c/source/common/ustrfmt.cpp",
        "//:icu4c/source/common/ustring.cpp",
        "//:icu4c/source/common/ustrtrns.cpp",
        "//:icu4c/source/common/utext.cpp",
        "//:icu4c/source/common/utf_impl.cpp",
        "//:icu4c/source/common/util.cpp",
        "//:icu4c/source/common/util_props.cpp",
        "//:icu4c/source/common/utrace.cpp",
        "//:icu4c/source/common/utrie.cpp",
        "//:icu4c/source/common/utrie2.cpp",
        "//:icu4c/source/common/utrie2_builder.cpp",
        "//:icu4c/source/common/utrie_swap.cpp",
        "//:icu4c/source/common/uts46.cpp",
        "//:icu4c/source/common/utypes.cpp",
        "//:icu4c/source/common/uvector.cpp",
        "//:icu4c/source/common/uvectr32.cpp",
        "//:icu4c/source/common/uvectr64.cpp",
        "//:icu4c/source/common/wintz.cpp"
    ],
    hdrs = [
        "//:icu4c/source/common/unicode/uidna.h",
        "//:icu4c/source/common/unicode/errorcode.h",
        "//:icu4c/source/common/unicode/ucat.h",
        "//:icu4c/source/common/unicode/localematcher.h",
        "//:icu4c/source/common/unicode/parsepos.h",
        "//:icu4c/source/common/unicode/unifunct.h",
        "//:icu4c/source/common/unicode/umachine.h",
        "//:icu4c/source/common/unicode/stringoptions.h",
        "//:icu4c/source/common/unicode/ucnv_cb.h",
        "//:icu4c/source/common/unicode/brkiter.h",
        "//:icu4c/source/common/unicode/bytestriebuilder.h",
        "//:icu4c/source/common/unicode/urename.h",
        "//:icu4c/source/common/unicode/uchriter.h",
        "//:icu4c/source/common/unicode/ucnvsel.h",
        "//:icu4c/source/common/unicode/ucnv.h",
        "//:icu4c/source/common/unicode/stringtriebuilder.h",
        "//:icu4c/source/common/unicode/urep.h",
        "//:icu4c/source/common/unicode/uscript.h",
        "//:icu4c/source/common/unicode/ubiditransform.h",
        "//:icu4c/source/common/unicode/symtable.h",
        "//:icu4c/source/common/unicode/usetiter.h",
        "//:icu4c/source/common/unicode/uchar.h",
        "//:icu4c/source/common/unicode/icuplug.h",
        "//:icu4c/source/common/unicode/udisplaycontext.h",
        "//:icu4c/source/common/unicode/usprep.h",
        "//:icu4c/source/common/unicode/unistr.h",
        "//:icu4c/source/common/unicode/strenum.h",
        "//:icu4c/source/common/unicode/uiter.h",
        "//:icu4c/source/common/unicode/ubrk.h",
        "//:icu4c/source/common/unicode/unorm.h",
        "//:icu4c/source/common/unicode/ucurr.h",
        "//:icu4c/source/common/unicode/rbbi.h",
        "//:icu4c/source/common/unicode/dbbi.h",
        "//:icu4c/source/common/unicode/uconfig.h",
        "//:icu4c/source/common/unicode/icudataver.h",
        "//:icu4c/source/common/unicode/stringpiece.h",
        "//:icu4c/source/common/unicode/uldnames.h",
        "//:icu4c/source/common/unicode/umutablecptrie.h",
        "//:icu4c/source/common/unicode/putil.h",
        "//:icu4c/source/common/unicode/udata.h",
        "//:icu4c/source/common/unicode/schriter.h",
        "//:icu4c/source/common/unicode/uset.h",
        "//:icu4c/source/common/unicode/bytestream.h",
        "//:icu4c/source/common/unicode/ubidi.h",
        "//:icu4c/source/common/unicode/ustringtrie.h",
        "//:icu4c/source/common/unicode/ushape.h",
        "//:icu4c/source/common/unicode/uloc.h",
        "//:icu4c/source/common/unicode/std_string.h",
        "//:icu4c/source/common/unicode/messagepattern.h",
        "//:icu4c/source/common/unicode/utf32.h",
        "//:icu4c/source/common/unicode/utf.h",
        "//:icu4c/source/common/unicode/uobject.h",
        "//:icu4c/source/common/unicode/utext.h",
        "//:icu4c/source/common/unicode/locdspnm.h",
        "//:icu4c/source/common/unicode/appendable.h",
        "//:icu4c/source/common/unicode/uenum.h",
        "//:icu4c/source/common/unicode/ucharstriebuilder.h",
        "//:icu4c/source/common/unicode/ucasemap.h",
        "//:icu4c/source/common/unicode/localpointer.h",
        "//:icu4c/source/common/unicode/resbund.h",
        "//:icu4c/source/common/unicode/ucnv_err.h",
        "//:icu4c/source/common/unicode/localebuilder.h",
        "//:icu4c/source/common/unicode/utf8.h",
        "//:icu4c/source/common/unicode/utf16.h",
        "//:icu4c/source/common/unicode/ptypes.h",
        "//:icu4c/source/common/unicode/uniset.h",
        "//:icu4c/source/common/unicode/ucptrie.h",
        "//:icu4c/source/common/unicode/dtintrv.h",
        "//:icu4c/source/common/unicode/enumset.h",
        "//:icu4c/source/common/unicode/platform.h",
        "//:icu4c/source/common/unicode/utypes.h",
        "//:icu4c/source/common/unicode/casemap.h",
        "//:icu4c/source/common/unicode/ulocbuilder.h",
        "//:icu4c/source/common/unicode/char16ptr.h",
        "//:icu4c/source/common/unicode/utf_old.h",
        "//:icu4c/source/common/unicode/normalizer2.h",
        "//:icu4c/source/common/unicode/ucpmap.h",
        "//:icu4c/source/common/unicode/ustring.h",
        "//:icu4c/source/common/unicode/simpleformatter.h",
        "//:icu4c/source/common/unicode/parseerr.h",
        "//:icu4c/source/common/unicode/utrace.h",
        "//:icu4c/source/common/unicode/rep.h",
        "//:icu4c/source/common/unicode/locid.h",
        "//:icu4c/source/common/unicode/unorm2.h",
        "//:icu4c/source/common/unicode/ucharstrie.h",
        "//:icu4c/source/common/unicode/uvernum.h",
        "//:icu4c/source/common/unicode/uclean.h",
        "//:icu4c/source/common/unicode/uversion.h",
        "//:icu4c/source/common/unicode/unimatch.h",
        "//:icu4c/source/common/unicode/umisc.h",
        "//:icu4c/source/common/unicode/normlzr.h",
        "//:icu4c/source/common/unicode/unifilt.h",
        "//:icu4c/source/common/unicode/edits.h",
        "//:icu4c/source/common/unicode/filteredbrk.h",
        "//:icu4c/source/common/unicode/caniter.h",
        "//:icu4c/source/common/unicode/chariter.h",
        "//:icu4c/source/common/unicode/utfiterator.h",
        "//:icu4c/source/common/unicode/ulocale.h",
        "//:icu4c/source/common/unicode/ures.h",
        "//:icu4c/source/common/unicode/idna.h",
        "//:icu4c/source/common/unicode/utfstring.h",
        "//:icu4c/source/common/unicode/bytestrie.h",
        "//:icu4c/source/common/unicode/docmain.h",
        "//:icu4c/source/common/cpputils.h",
        "//:icu4c/source/common/locdistance.h",
        "//:icu4c/source/common/uarrsort.h",
        "//:icu4c/source/common/lsr.h",
        "//:icu4c/source/common/fixedstring.h",
        "//:icu4c/source/common/servnotf.h",
        "//:icu4c/source/common/rbbinode.h",
        "//:icu4c/source/common/unormimp.h",
        "//:icu4c/source/common/uinvchar.h",
        "//:icu4c/source/common/serv.h",
        "//:icu4c/source/common/rbbisetb.h",
        "//:icu4c/source/common/wintz.h",
        "//:icu4c/source/common/ubrkimpl.h",
        "//:icu4c/source/common/uniquecharstr.h",
        "//:icu4c/source/common/emojiprops.h",
        "//:icu4c/source/common/cstr.h",
        "//:icu4c/source/common/sprpimpl.h",
        "//:icu4c/source/common/cwchar.h",
        "//:icu4c/source/common/dictbe.h",
        "//:icu4c/source/common/unifiedcache.h",
        "//:icu4c/source/common/locutil.h",
        "//:icu4c/source/common/dictionarydata.h",
        "//:icu4c/source/common/utypeinfo.h",
        "//:icu4c/source/common/ustr_cnv.h",
        "//:icu4c/source/common/unisetspan.h",
        "//:icu4c/source/common/rbbirpt.h",
        "//:icu4c/source/common/uvectr32.h",
        "//:icu4c/source/common/ucurrimp.h",
        "//:icu4c/source/common/ucase.h",
        "//:icu4c/source/common/uposixdefs.h",
        "//:icu4c/source/common/capi_helper.h",
        "//:icu4c/source/common/ustr_imp.h",
        "//:icu4c/source/common/utracimp.h",
        "//:icu4c/source/common/uset_imp.h",
        "//:icu4c/source/common/norm2_nfc_data.h",
        "//:icu4c/source/common/uenumimp.h",
        "//:icu4c/source/common/uvectr64.h",
        "//:icu4c/source/common/utrie2_impl.h",
        "//:icu4c/source/common/resource.h",
        "//:icu4c/source/common/udataswp.h",
        "//:icu4c/source/common/usc_impl.h",
        "//:icu4c/source/common/uprops.h",
        "//:icu4c/source/common/static_unicode_sets.h",
        "//:icu4c/source/common/cstring.h",
        "//:icu4c/source/common/locmap.h",
        "//:icu4c/source/common/mutex.h",
        "//:icu4c/source/common/ucnv_cnv.h",
        "//:icu4c/source/common/utrie.h",
        "//:icu4c/source/common/uchar_props_data.h",
        "//:icu4c/source/common/norm2allmodes.h",
        "//:icu4c/source/common/uresimp.h",
        "//:icu4c/source/common/ubidi_props_data.h",
        "//:icu4c/source/common/ucln_imp.h",
        "//:icu4c/source/common/ubidi_props.h",
        "//:icu4c/source/common/util.h",
        "//:icu4c/source/common/rbbi_cache.h",
        "//:icu4c/source/common/uassert.h",
        "//:icu4c/source/common/umapfile.h",
        "//:icu4c/source/common/ulayout_props.h",
        "//:icu4c/source/common/localsvc.h",
        "//:icu4c/source/common/hash.h",
        "//:icu4c/source/common/ulist.h",
        "//:icu4c/source/common/umutex.h",
        "//:icu4c/source/common/restrace.h",
        "//:icu4c/source/common/ucasemap_imp.h",
        "//:icu4c/source/common/ulocimp.h",
        "//:icu4c/source/common/ucptrie_impl.h",
        "//:icu4c/source/common/putilimp.h",
        "//:icu4c/source/common/icuplugimp.h",
        "//:icu4c/source/common/ucmndata.h",
        "//:icu4c/source/common/udatamem.h",
        "//:icu4c/source/common/rbbitblb.h",
        "//:icu4c/source/common/rbbidata.h",
        "//:icu4c/source/common/lstmbe.h",
        "//:icu4c/source/common/uhash.h",
        "//:icu4c/source/common/ucase_props_data.h",
        "//:icu4c/source/common/ubidiimp.h",
        "//:icu4c/source/common/sharedobject.h",
        "//:icu4c/source/common/charstrmap.h",
        "//:icu4c/source/common/ucnv_io.h",
        "//:icu4c/source/common/ucol_data.h",
        "//:icu4c/source/common/ucnv_bld.h",
        "//:icu4c/source/common/ucln_cmn.h",
        "//:icu4c/source/common/brkeng.h",
        "//:icu4c/source/common/ureslocs.h",
        "//:icu4c/source/common/unistrappender.h",
        "//:icu4c/source/common/uelement.h",
        "//:icu4c/source/common/charstr.h",
        "//:icu4c/source/common/cmemory.h",
        "//:icu4c/source/common/punycode.h",
        "//:icu4c/source/common/ustrfmt.h",
        "//:icu4c/source/common/servloc.h",
        "//:icu4c/source/common/ucln.h",
        "//:icu4c/source/common/locbased.h",
        "//:icu4c/source/common/rbbiscan.h",
        "//:icu4c/source/common/pluralmap.h",
        "//:icu4c/source/common/mlbe.h",
        "//:icu4c/source/common/propsvec.h",
        "//:icu4c/source/common/ucnv_ext.h",
        "//:icu4c/source/common/msvcres.h",
        "//:icu4c/source/common/localeprioritylist.h",
        "//:icu4c/source/common/normalizer2impl.h",
        "//:icu4c/source/common/ruleiter.h",
        "//:icu4c/source/common/localefallback_data.h",
        "//:icu4c/source/common/bmpset.h",
        "//:icu4c/source/common/ucnvmbcs.h",
        "//:icu4c/source/common/rbbirb.h",
        "//:icu4c/source/common/ucnv_imp.h",
        "//:icu4c/source/common/patternprops.h",
        "//:icu4c/source/common/loclikelysubtags.h",
        "//:icu4c/source/common/utrie2.h",
        "//:icu4c/source/common/messageimpl.h",
        "//:icu4c/source/common/propname_data.h",
        "//:icu4c/source/common/propname.h",
        "//:icu4c/source/common/ucol_swp.h",
        "//:icu4c/source/common/bytesinkutil.h",
        "//:icu4c/source/common/uvector.h",
        "//:icu4c/source/common/uresdata.h",
        "//:icu4c/source/common/ustrenum.h"
    ],
    copts = [
        "-DU_COMMON_IMPLEMENTATION",
        "-Iicu4c/source/common",
        "-Iicu4c/source/i18n",
    ],
    deps = [
        "//bazel/icu4c/source/stubdata:stubdata",
        ":common_headers",
    ],
)
